<resources>
    <string name="app_name">Cards Splash</string>
    <string name="welcome">Welcome</string>
    <string name="enter_name">Please type your name:</string>
    <string name="begin">Begin without user</string>
    <string name="hello">Hello</string>
    <string name="name_input">Name:</string>
    <string name="time_left">Time Left</string>
    <string name="you_won">You WON!</string>
    <string name="you_lose">You Lose</string>
    <string name="winLevel1">level1</string>
    <string name="winLevel2">level2</string>
    <string name="winLevel3">level3</string>
    <string name="winLevel4">level4</string>
    <string name="winLevel5">level5</string>
    <string name="winLlevel6">level6</string>
    <string name="level1">level1</string>
    <string name="level2">level2</string>
    <string name="level3">level3</string>
    <string name="level4">level4</string>
    <string name="level5">level5</string>
    <string name="level6">level6</string>
    <string name="level1o">In this stage, you have to click at the same card, in 5 seconds!</string>
    <string name="level2o">Easy huh?,now you have to click at the same card, in 4 seconds!</string>
    <string name="level3o">Enough jokes, you have to click at the same card, in 3 seconds!</string>
    <string name="level4o">You have only 1 second to click at the same card, but be aware - the cards will shuffle every time</string>
    <string name="level5o">While you click at the cards, you will have time to remember the cards! after the time will over, the master card will show himself, can you remember where he belong to?</string>
    <string name="nextlevel">Next Level</string>
    <string name="worldback">Go to world</string>
    <string name="wonnextworld">You won! click for going to the next world</string>
    <string name="next_world">Next World</string>
    <string name="title_activity_splash">splash</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="difrent">Click on the different card</string>
    <string name="try_again">Try again</string>
    <string name="start_with_user">Login with user</string>
    <string name="start_user">Login as guest</string>
    <string name="not_me">not me</string>
    <string name="you_or_not">It is you or not?</string>
    <string name="enter_as_username">Connect</string>
    <string name="chooce_2_match_cards">chooce 2 match cards</string>
    <string name="Guest">Guest</string>
    <string name="seconds">" Seconds"</string>
    <string name="button">Return</string>
    <string name="Welcome">"Welcome "</string>
    <string name="you_have_to_start_all_the_world_level_again">You have to start all the world level again!</string>
    <string name="aboutme">Our names is Ido Nagar and Palin Ayala. we develop this game for our studying in Computer Sience btg. we hope you will enjoy the game.</string>
    <string name="close">Close</string>
    <string name="idonagar">Ido and Palin</string>

</resources>